--- a/eatEatRevolution/index.html
+++ b/eatEatRevolution/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/images/burger.png">
     <script src="js/p5.min.js"></script>
     <!-- <script src="js/p5.dom.min.js"></script> -->
-    <!-- <script src="js/p5.sound.min.js"></script> -->
+    <script src="js/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
